# template-project

./: .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yaml
template_project/: get_print.py  main.py
test/: test_placeholder.py
