[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[project]
name = "template_project"
requires-python = ">=3.8"
version = "1.0.0"
description = "Template Project"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Thinagar", email = "thinagar@gmail.com" }]
maintainers = [{ name = "Thinagar", email = "thinagar@gmail.com" }]
keywords = ["template-project", "python3"]
dependencies = []

[project.optional-dependencies]
dev = ["black", "pre-commit", "pytest", "pylint", "mypy", "isort"]

[project.urls]
Homepage = "https://example.com"
Documentation = "https://readthedocs.org"
Repository = "https://github.com/Thinagar-Sivadas/template-project.git"
Issues = "https://github.com/Thinagar-Sivadas/template-project/issues"

[project.scripts]
template_project = "template_project.main:main"


[tool.isort]
profile = 'black'

[tool.pylint.format]
max-line-length = 120

[tool.black]
line-length = 120
